{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 16,
  "lineage": "119a25e2-c1c9-b6f5-3fcd-eb5d8fd31e0d",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-29T06:53:53.960-07:00",
            "deny": [],
            "description": "Allow HTTP and HTTPS traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cafe-coding-fleet/global/firewalls/http-https",
            "log_config": [],
            "name": "http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/cafe-coding-fleet/global/networks/default",
            "priority": 1000,
            "project": "cafe-coding-fleet",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cafe-coding-fleet/global/firewalls/http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "talos-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-29T06:53:54.413-07:00",
            "deny": [],
            "description": "Allow Kubernetes API access",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cafe-coding-fleet/global/firewalls/kubernetes-api",
            "log_config": [],
            "name": "kubernetes-api",
            "network": "https://www.googleapis.com/compute/v1/projects/cafe-coding-fleet/global/networks/default",
            "priority": 1000,
            "project": "cafe-coding-fleet",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cafe-coding-fleet/global/firewalls/kubernetes-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "talos-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "talos_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "50000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-29T06:53:54.561-07:00",
            "deny": [],
            "description": "Allow Talos API access (talosctl)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cafe-coding-fleet/global/firewalls/talos-api",
            "log_config": [],
            "name": "talos-api",
            "network": "https://www.googleapis.com/compute/v1/projects/cafe-coding-fleet/global/networks/default",
            "priority": 1000,
            "project": "cafe-coding-fleet",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cafe-coding-fleet/global/firewalls/talos-api",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "talos-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}